--- a/desafio4PreEntrega1/package.json
+++ b/desafio4PreEntrega1/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "desafio3",
+  "name": "desafio4preentrega1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon SRC/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
