--- a/desafio5/package.json
+++ b/desafio5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio4preentrega1",
+  "name": "desafio5",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "express-handlebars": "^7.1.2",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5"
   }
 }
