--- a/desafio16/package.json
+++ b/desafio16/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio5",
+  "name": "desafio16",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -32,6 +32,8 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0"
   },
   "devDependencies": {
